ensure 1px of gap

--- a/packages/js/product-editor/src/components/button-with-dropdown-menu/style.scss
+++ b/packages/js/product-editor/src/components/button-with-dropdown-menu/style.scss
@@ -1,4 +1,4 @@
-.woocommerce-button-with-dropdown-menu {
+.woocommerce-button-with-dropdown-menu.components-flex {
 	gap: 1px;
 
 	&__main-button {
